Use collectors instead of toList()